[package]
name = "blob"
version = "0.2.0"
authors = ["Robbie Symonds"]
repository = "https://github.com/robbiesymonds/robbiesymonds.me"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'Path2d',
    'CanvasGradient'
]